fixing link wrap

--- a/css/main.less
+++ b/css/main.less
@@ -21,6 +21,7 @@ a {
   font-weight: 700;
   font-style: italic;
   overflow-wrap: break-word;
+  word-break: break-word;
   &:hover {
     text-decoration: underline;
   }
@@ -29,6 +30,7 @@ a {
 .container {
   width: 100%;
   height: 100vh;
+
     &::before {
         // content: '[RESTRICTED AREA] - [RESTRICTED AREA] - [RESTRICTED AREA] - [RESTRICTED AREA] - [RESTRICTED AREA] - [RESTRICTED AREA]';
         font-weight: bold;
@@ -286,7 +288,7 @@ a {
         border-radius: 10px;
         padding: 5px;
         border: 1px solid #000;
-        transition: all 0.1s;
+        transition: all 0.3s;
         &:hover {
           background-color: #000;
           color: #fff;
